--- a/appsscript.json
+++ b/appsscript.json
@@ -1,5 +1,5 @@
 {
-  "timeZone": "Asia/Kolkata",
+  "timeZone": "America/Los_Angeles",
   "dependencies": {
     "enabledAdvancedServices": [{
       "userSymbol": "YouTube",
